# kolokwium_cmake

zad1/: Makefile
zad3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
